src_old/objects/JobComment__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobAttempt__c</fullName>
        <label>Job Attempt</label>
        <referenceTo>JobAttempt__c</referenceTo>
        <relationshipLabel>Job Comments</relationshipLabel>
        <relationshipName>Job_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Comments</relationshipLabel>
        <relationshipName>Job_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location</label>
        <referenceTo>ProjectLocation__c</referenceTo>
        <relationshipLabel>Job Comments</relationshipLabel>
        <relationshipName>Job_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Job Comments</relationshipLabel>
        <relationshipName>Job_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Job Comments</relationshipLabel>
        <relationshipName>Job_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Comment</label>
    <nameField>
        <displayFormat>JC-{000000000}</displayFormat>
        <label>Job Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>